<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/transaction" />

    <item
        android:id="@+id/navigation_maps"
        android:title="" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_pin"
        android:title="@string/profile" />

</menu>