<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_location_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/location_name"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_location_photo"
        app:layout_constraintTop_toTopOf="@+id/img_location_photo" />

    <TextView
        android:id="@+id/tv_location_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/location_address"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_location_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_name" />

    <TextView
        android:id="@+id/tv_location_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/location_distance"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_location_phone"
        app:layout_constraintTop_toTopOf="@+id/tv_location_phone" />

    <TextView
        android:id="@+id/tv_location_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/location_phone"
        app:layout_constraintBottom_toBottomOf="@+id/img_location_photo"
        app:layout_constraintEnd_toStartOf="@+id/tv_location_distance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_location_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_address" />
</androidx.constraintlayout.widget.ConstraintLayout>